--- a/config/database.yml
+++ b/config/database.yml
@@ -5,22 +5,25 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: postgresql
+  
   pool: 5
   timeout: 5000
   host: localhost
 
 development:
+  adapter: sqlite3
   <<: *default
-  database: development_database
+  database: dev.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  adapter: sqlite3
   <<: *default
-  database: test_database
+  database: test.sqlite3
 
 production:
+  adapter: postgresql
   <<: *default
   database: production_database
