link and style fixes for updates

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ default: &default
 development:
   adapter: sqlite3
   <<: *default
-  database: dev.sqlite3
+  database: db/dev.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -21,7 +21,7 @@ development:
 test:
   adapter: sqlite3
   <<: *default
-  database: test.sqlite3
+  database: db/test.sqlite3
 
 production:
   adapter: postgresql
