--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ pickle-email-*.html
 /.bundle
 /vendor/bundle
 .DS_Store
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
