aws deploy: add timeout to production database

--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ test:
 
 production:
   adapter: postgresql
-  <<: *default
+  timeout: 5000
+  host: <%= ENV['RDS_HOSTNAME'] %>
   username: <%= ENV['RDS_USERNAME'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
-  host: <%= ENV['RDS_HOSTNAME'] %>
