aws deploy: checking if name in database.yml is read

--- a/config/database.yml
+++ b/config/database.yml
@@ -26,6 +26,7 @@ test:
 production:
   adapter: postgresql
   timeout: 5000
+  name: testdatabase
   host: <%= ENV['RDS_HOSTNAME'] %>
   username: <%= ENV['RDS_USERNAME'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
