aws deploy: update setup.config

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -1,7 +1,4 @@
-# Run rake tasks before an application deployment
 container_commands:
-  01bundler-pg:
+ db_create:
     command: "rake db:create"
-  db:
-	command: "bundle exec rake db:migrate"
-	leader_only: true
+    leader_only: true
