aws deploy: get fb app secret from env

--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ test:
 production:
   adapter: postgresql
   <<: *default
-  database: manifesto_tracker_database
+  database: tracker_db
   host: <%= ENV['RDS_HOSTNAME'] %>
   username: <%= ENV['RDS_USERNAME'] %>
   password: <%= ENV['RDS_PASSWORD'] %>
